# Zappy

./: .gitignore  Makefile  README.md  run_tests.sh
ai/: Makefile
ai/include/: command.h  zappy_ai.h
ai/src/: ai.c  ai2.c  broadcast_message.c  change_direction.c  check_level.c  check_level2.c  client_push_command.c  create_client.c  evoluate.c  evoluate2.c  evoluate3.c  gest_map.c  handle_map.c  if_forest.c  init_client.c  loop_client.c  main.c  map_utils.c  my_getnbr.c  parse_ret.c  path_finding_object.c  player.c  print_info.c  robot.c  robot_2.c  round_pos_map.c  send_message.c  stdin.c  utils.c
ai/src/command/: broadcast.c  connect_nbr.c  eject_player.c  fork_player.c  incantation.c  inventory.c  look_around.c  movement.c  take_set_object.c
archi/: Untitled Diagram.drawio  server_archi.drawio
gui/: Makefile
gui/include/: command.h  zappy_gui.h
gui/src/: create_client.c  free_player.c  get_command.c  handle_clock.c  init_window.c  loop_client.c  loop_command.c  main.c  parse_ret.c  print_info.c  send_message.c  stdin.c  utils.c
gui/src/command_gui/: bct.c  mct.c  msz.c  pdi.c  pic.c  pie.c  pin.c  pnw.c  ppo.c  seg.c  sgt.c  tna.c
gui/src/graphics/: draw.c  draw_items.c  utils.c  utils_font.c
include/: list.h  nlib.h
libs/: Makefile
libs/list/: Makefile
libs/list/include/: list.h
libs/list/src/: manage_list.c  manage_node.c  print_list.c  push_node.c  remove_node.c
libs/nlib/: Makefile
libs/nlib/include/: nlib.h
libs/nlib/queue/: remove_socket_command.c  send_message.c  update_command.c
libs/nlib/select/: select.c
libs/nlib/socket/: init_socket.c  manage_socket.c  read_socket.c  write_socket.c
nlib/: Makefile
nlib/select/: select.c
nlib/socket/: create_socket.c  destroy_socket.c  init_socket.c  read_socket.c
server/: Makefile
server/include/: client.h  core.h  game.h  inventory.h  map.h  server.h  team.h  trantorian.h  utils.h  zappy_server.h
server/src/: main.c
server/src/client_handling/: client_command_utils.c  client_def_exec_command.c  client_define_type.c  client_exec_command.c  client_gui_exec_command.c  client_update.c  clients_update_delete.c
server/src/client_handling/commands/: eject.c  set.c  take.c
server/src/client_handling/default_commands/: broadcast.c  connect_nbr.c  death.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  left.c  look.c  right.c  set.c  take.c
server/src/client_handling/gui_commands/: bct.c  ebo.c  edi.c  eht.c  enw.c  mct.c  msz.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  plv.c  pnw.c  ppo.c  sbp.c  seg.c  sgt.c  smg.c  sst.c  suc.c  tna.c
server/src/game_handling/: game_update.c  game_update_handler.c  game_update_incantations.c  game_update_invocations.c  game_update_map.c  game_update_trantorians.c  game_utils.c  team_get_obj.c
server/src/game_handling/game_utils/: game_calc.c  game_calc_sound_dir.c  game_look_utils.c  game_look_utils_2.c  game_map_utils.c  game_utils.c  trantorian_utils.c
server/src/manage_struct/: init_structures.c  manage_client.c  manage_core.c  manage_game.c  manage_incantation.c  manage_inventory.c  manage_map.c  manage_server.c  manage_team.c  manage_trantorian.c
server/src/server_handling/: server_handling.c  start_server.c
server/src/utils/: command_utils.c  is_uuid.c  parse_params.c  parse_params_2.c  set_fds.c
tests/: CMakeLists.txt
tests/include/: tests.hpp
tests/src/: TestClient.cpp  TestClientLogin.cpp  TestCore.cpp  TestDefaultProtocol.cpp  TestGUIEvent.cpp  TestGUIProtocol.cpp  TestInitClient.cpp  TestInitGame.cpp  TestInitInventory.cpp  TestInitServer.cpp  TestInitTeam.cpp  TestInitTrantorian.cpp  TestMap.cpp  TestParseParams.cpp  TestServer.cpp  TestTeams.cpp  TestTrantorian.cpp  TestUtils.cpp  Utils.cpp  main.cpp  test_random.cpp
utils/: install_raylib.sh  run_tests.sh
